# collab

./: .gitignore  CMakeLists.txt  collab.cbp
src/client/: CMakeLists.txt  MainWindow.ui  mainwindow.cpp  mainwindow.h
src/common/: CMakeLists.txt
