FILE(GLOB Sources *.cpp) 
FILE(GLOB Mocs *.h)
FILE(GLOB UI *.ui)

QT4_WRAP_UI(UIS_H ${UI})

QT4_WRAP_CPP(MOC_SRCS ${Mocs})

INCLUDE_DIRECTORIES(${QT_QTTEST_INCLUDE_DIR} ${QT_QTNETWORK_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

add_executable(collab main.cpp ${Mocs} ${UI} ${MOC_SRCS} ${Sources})

TARGET_LINK_LIBRARIES(collab ${LIBRARIES})